# Hora

./: .gitignore  CITATION.cff  Dockerfile  HT.py  HT_X.py  Hn  HnC.py  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  rm dist.txt  setup copy.py  setup.py  wsgi.py
HTServer/: HTServer.py  hypernetwork.proto  hypernetwork_pb2.py  hypernetwork_pb2_grpc.py
core/: HTConfig.py  HTMeronymy.py  HTQL.py  HTTypes.py  HTUtils.py  Hypernetwork.py  Hypersimplex.py  __init__.py
examples/: Banking.ipynb  Boundaries.ipynb  C4.ipynb  Car.ipynb  Cat.ipynb  ExampleOOFunction.puml  Explicit-R.ipynb  Faces.ipynb  Faces2.ipynb  Graphs.ipynb  HyperPn.ipynb  Hyperunion.ipynb  Intersection.ipynb  Language-Advanced.ipynb  Language-Basic.ipynb  Levels.ipynb  Logic.ipynb  NewLanguage.ipynb  Power.ipynb  R.ipynb  Robot.ipynb  SEMS.ipynb  Sequence.ipynb  SimplicalComplex-QAnalysis.ipynb  Simpson.ipynb  TheCo.ipynb  Thesis.ipynb  Thesis1.ipynb  Thesis2.ipynb  Train.ipynb  University.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  Untitled4.ipynb  Untitled5.ipynb  UseCase-Example-Function  energy.ipynb  face1.ht  (+4 more)
examples/pictures/: Thesis-HT-FM-1-behaviour-hn  Thesis-HT-FO-1-behaviour-hn  Thesis-HT-OO-1-behaviour-hn  Thesis-func-2-actions-hn  (+21 more)
grpcServer/: HnServer.py
ht-server/: hypernetwork.proto  server.py
hypernetworks/: __init__.py
old/: setup.py
restServer/: server.py
test/: test-from-matrix.py  test-string.py  test_Compiler.py
utils/: HTCompiler.py  HTExec copy.py  HTExec-1.0a.py  HTGraph.py  HTImpExp.py  HTInOut.py  HTJSON.py  HTLaTex.py  HTMatrix.py  HTSearch.py  HTSimplicalComplex.py  HTString.py  HTTools.py  HTWebOnt.py  fullHT.lark
(+60 files in other folders)
