[build-system]
requires = [ "setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tools.setuptools]
packages = [
    "hypernetworks",
    "hypernetworks.core",
    "hypernetworks.utils",
]

[project]
name = "Hora"
description = "Hypernetwork Theory library."
long-description = file: README.md
requires-python = ">=3.7"
version = "0.1.0"
license = "MIT"
url = "https://github.com/rdchar/Hora"
dependencies = [
    "numpy==1.21.2",
    "graphviz==0.17", 
    "networkx==2.6.3", 
    "lark-parser==0.12.0", 
    "click==8.0.1", 
    "pymongo==3.12.0", 
    "rdflib==6.0.1", 
    "Flask==2.0.1", 
    "Flask-Cors~=3.0.9"
]

authors = [
    { name="Richard Charlesworth", email="" }
]
